--- a/Introduction to Object Oriented Programming/Lecture/09. Generics.md
+++ b/Introduction to Object Oriented Programming/Lecture/09. Generics.md
@@ -89,7 +89,7 @@ public static void printArray(Character[] array) {
   ```
   > Type-parameter sections: one or more type parameters delimited by <> Each type parameter parameterizeds the data types that can be used in the method (in the above example, T can be used anywhere a data type name is expected)
 
-## Declaring neneric methods
+## Declaring generic methods
 * Generic methods can be delcared like any other normal methods
 * Type parameters can represnet only reference types (not primitive tyeps)
   ```java
@@ -231,4 +231,137 @@ Output
 The list contains 2 element(s)
 After removing, the list contains 1 element(s)                                 
 ```
-                         
+
+## Declaring a generic class
+* A generic class declaration looks like a non-generic class declaration, except that the class name is followed by a type-parameter section
+* The type-parameter section can have one or more type parameters separated by commas
+* Generic classes are also known as parameterized classes
+* In a generic class, type parameters can be used anywhere a type is expected (e.g., when declaring parameters, return types, defining variables...)
+
+## A generic *Stack* class
+```java
+import java.util.ArrayList;
+
+public class Stack<T> {
+	private ArrayList<T> elements; // use an ArrayList to implement the stack
+	
+	public Stack() {
+		this(10);
+	}
+	
+	public Stack(int capacity) {
+		int initCapacity = capacity > 0 ? capacity : 10;
+		elements = new ArrayList<T>(initCapacity);
+	}
+	
+	public void push(T value) {
+		elements.add(value);
+	}
+	
+	public T pop() throws Exception {
+		if (elements.isEmpty()) {
+			throw new Exception("Stack is empty, cannot pop");
+		}	
+		return elements.remove(elements.size() - 1);
+	}
+}
+```
+```java
+public class TestStack {
+	public static void main(String[] args) throws Exception {
+		Stack<Double> doubleStack = new Stack<Double>(5);
+		Stack<Integer> integerStack = new Stack<Integer>();
+		doubleStack.push(1.2);
+		Double value = doubleStack.pop();
+		System.out.println(value);
+		integerStack.push(1);
+		integerStack.push(2);
+		while (true) {
+			Integer i = integerStack.pop();
+			System.out.println(i);
+		}
+	}
+}
+```
+Output
+```
+1.2
+2
+1
+Exception...
+```
+
+### Question
+1. Q1: Will the compiler successfully compile the following code?
+```java
+String s = "hello world";
+Object obj = s;
+```
+* It is **safe** to assign s (of type String) to `obj` (of type Object) because an instance of a subclass (subtype) is also an instance of a superclass (supertype)
+* "Safe" means any operations that can be done via the refernce **obj** are also allowed to be done via the reference **s**
+
+2. Q2: Will the compiler successfully compile the following code?
+```java
+ArrayList<String> ls = new ArrayList<String>();
+List<String> ls2 = ls;
+```
+* It is safe to assign `ls` to `ls2` because an `ArrayList` of String is also a List of String
+* Any operations that can be done via the reference `ls2` can also be done via the reference `ls`
+
+3. Q3: Will the compiler successfully compile the following code?
+```java
+List<String> ls = new ArrayList<String>();
+List<Object> lo = ls;
+```
+- No, the compiler will not successfully compile the following code:
+
+- This is because a `List<String>` is not a subtype of `List<Object>`. Even though `String` is a subtype of `Object`, the type parameters of the `List` interface are not covariant (meaning that they do not follow the same subtype relationship as their type arguments). Therefore, you cannot assign a `List<String>` to a `List<Object>` variable.
+
+- If you try to compile this code, you will get a compiler error that says something like "incompatible types: List<String> cannot be converted to List<Object>".
+* This boils down to the question: is a List of String a List of Object?
+	- Although String is a subclass of Object, `List<String>` is not a subclass of `List<Object>`. This is because Java generics are not covariant.    
+	- If `List<String>` were a subtype of `List<Object>`, you could add any object to a `List<String>` that would be a legal addition to a `List<Object>`. However, if you could do that, you would be able to insert an object of another type into a `List<String>`, which is not allowed since a `List<String>` can only hold Strings. To prevent that, Java doesn't allow you to treat `List<String>` as a subtype of `List<Object>`.
+* What if we ask the safety question: is it true that any operations that can be done via the refernce `lo` can also be done via `ls`?
+	- Yes, it is true that any operations that can be done via the reference `lo` can also be done via `ls`. 
+	- Since `ls` and `lo` both refer to the same instance of `ArrayList<String>`, any method call that is legal on a `List<Object>` is also legal on a `List<String>`, because `ArrayList<String>` implements both `List<String>` and `List<Object>`. 
+	- However, this does not mean that the code `List<Object> lo = ls;` is legal. As I mentioned before, `List<String>` is not a subtype of `List<Object>` in Java, so the assignment is not allowed.
+
+### Analysis of Q3
+* As a reference of type List<Object>, `lo` can be used for the following operation:
+```java
+lo.add(new Double());
+```
+* However, we cannot perform the same operation via the reference `ls` because it is of type List<String>
+```java
+List<String> ls = new ArrayList<String>();
+List<Object> lo = ls; // type mismatch
+```
+* if the compiler allows assigning `ls` to `lo`, then the code:
+```java
+List<String> ls = new ArrayList<String>();
+List<Object> lo = ls;
+lo.add(new Double(0.0));
+String s = ls.get(0);
+```
+> ClassCastException Generic classes are designed to provide type safety, such exceptions are awkward
+
+## Collections
+* Suppose we want to write a method to handle all kinds of collections:
+```java
+public static void printCollection(Collection<Object> c) {
+	for(Object e : c)
+		System.out.println(c);
+}
+Collection<String> strs = new ArrayList<String>();
+printArray(strs); // is this call ok?
+```
+Apply the rule, and we will know that `Collection<String>` is not subtype of `Collection<Object>`, so the code cannot compile
+
+* `Collection<?> (pronounced "collection of unkonwn"), that is, collection whose element type matches anything
+```java
+public static void printCollection(Collection<?> c) {
+	for(Object e : c)
+		System.out.println(c);
+}
+```
+> Note that we can still read elements from `c` and give them the type "Object", since whatever the actual type of the collection element is, it is a subtype of Object
